# SyllabusDB

./: .bazelproject  .bazelrc  .gitignore  README.md  WORKSPACE.bazel  justfile  maven_install.json
docs/: book.toml
docs/src/: SUMMARY.md  forward.md
docs/src/index_lifecycle/: index.md
docs/src/indexer/: definition.md
docs/src/intro/: document_db.md  index.md  indexes.md  json.md  kv_store.md  overview.md
docs/src/query_planning/: index.md
java/com/rockwotj/syllabusdb/core/bytes/: BUILD.bazel  ByteArray.java
java/com/rockwotj/syllabusdb/core/document/: BUILD.bazel  CollectionId.java  DocId.java  Document.java  FieldName.java  FieldPath.java  Path.java  Value.java
java/com/rockwotj/syllabusdb/core/document/converter/: BUILD.bazel  DocConverter.java  IdConverter.java
java/com/rockwotj/syllabusdb/core/encoding/index/: BUILD.bazel  IndexEntryEncoder.java
java/com/rockwotj/syllabusdb/core/encoding/value/: BUILD.bazel  Constants.java  InvalidEncodingException.java  ValueDecoder.java  ValueEncoder.java  ValueTag.java
java/com/rockwotj/syllabusdb/core/index/: BUILD.bazel  Constants.java  Direction.java  Index.java  IndexDecoder.java  IndexEncoder.java  IndexEntry.java  IndexField.java  IndexName.java  IndexValue.java  InvalidEncodingException.java  ValueTag.java
java/com/rockwotj/syllabusdb/core/index/converter/: BUILD.bazel  IndexConverter.java
java/com/rockwotj/syllabusdb/core/indexer/: BUILD.bazel  Indexer.java
java/com/rockwotj/syllabusdb/core/util/compare/: BUILD.bazel  CodepointComparator.java  LexicographicalComparator.java  TotalOrderDoubleComparator.java
java/com/rockwotj/syllabusdb/core/util/concurrent/: AcquiredLock.java  BUILD.bazel  Lock.java  LockAcquisitionTimeoutException.java  Locks.java  UnexpectedInterruptedException.java  UpgradableLock.java
java/com/rockwotj/syllabusdb/kv/api/: BUILD.bazel  KeyValueStore.java
java/com/rockwotj/syllabusdb/kv/memory/: BUILD.bazel  InMemoryKeyValueStore.java
java/com/rockwotj/syllabusdb/server/: BUILD.bazel  Server.java
java/com/rockwotj/syllabusdb/server/operations/write/: BUILD.bazel  WriteOperation.java
javatests/com/rockwotj/syllabusdb/core/document/: BUILD.bazel  ValueTest.java
javatests/com/rockwotj/syllabusdb/core/document/testdata/: BUILD.bazel  Values.java
javatests/com/rockwotj/syllabusdb/core/encoding/value/: BUILD.bazel  ValueTest.java
javatests/com/rockwotj/syllabusdb/core/index/: BUILD.bazel  IndexTest.java
javatests/com/rockwotj/syllabusdb/core/util/concurrent/: BUILD.bazel  UpgradableLockTest.java
javatests/com/rockwotj/syllabusdb/kv/memory/: BUILD.bazel  InMemoryKeyValueStoreTest.java
