package(
    default_visibility = [
        "//visibility:public",
    ],
)

java_library(
    name = "indexer",
    srcs = glob(
        ["*.java"],
        exclude = ["*Test.java"],
    ),
    deps = [
        "//java/com/rockwotj/syllabusdb/core/document",
        "//java/com/rockwotj/syllabusdb/core/index",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
