package(
    default_visibility = [
        "//javatests:__subpackages__",
    ],
)

java_library(
    name = "memory",
    srcs = glob(
        ["*.java"],
        exclude = ["*Test.java"],
    ),
    deps = [
        "//java/com/rockwotj/syllabusdb/core/bytes",
        "//java/com/rockwotj/syllabusdb/kv/api",
        "@maven//:com_google_code_findbugs_jsr305",
    ],
)
