package(
    default_visibility = [
        "//visibility:public",
    ],
)

java_test(
    name = "ValueTest",
    srcs = ["ValueTest.java"],
    deps = [
        "//java/com/rockwotj/syllabusdb/core/document",
        "//javatests/com/rockwotj/syllabusdb/core/document/testdata",
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_truth_truth",
        "@maven//:junit_junit",
    ],
)
