package(
    default_visibility = [
        "//visibility:public",
    ],
)

java_library(
    name = "concurrent",
    srcs = glob(
        ["*.java"],
        exclude = ["*Test.java"],
    ),
    deps = [
        "@maven//:com_google_code_findbugs_jsr305",
        "@maven//:com_google_guava_guava",
    ],
)
